--- a/.editorconfig
+++ b/.editorconfig
@@ -5,6 +5,11 @@ indent_style = space
 indent_size = 4
 tab_width = 4
 
+[{Makefile,**.mk}]
+# Use tabs for indentation (Makefiles require tabs)
+indent_style = tab
+
+
 [*.hs]
 indent_style = space
 indent_size = 8
